--- a/src/pages/content.html
+++ b/src/pages/content.html
@@ -42,7 +42,7 @@ subject: My Basic Email Template Subject
 					</row>
 					<row>
 						<columns small="3" large="2">
-							<img class="small-float-center" src="/assets/img/amazon.png" alt="UBS-Amazon partnership">
+							<img class="small-float-center" src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/amazon.png" alt="UBS-Amazon partnership">
 						</columns>
 						<columns small="9" large="10">
 							<h4 class="blue">UBS-Amazon partnership: A glimpse of wealth management’s future</h4>
@@ -75,7 +75,7 @@ subject: My Basic Email Template Subject
 				<callout>
 					<row>
 						<columns small="3" large="2">
-							<img class="small-float-center" src="/assets/img/hungry.png" alt="Hearsay in Budapest">
+							<img class="small-float-center" src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/hungry.png" alt="Hearsay in Budapest">
 						</columns>
 						<columns small="9" large="10">
 							<h3>Are you HUNGARY for your next role? Come join Hearsay in Budapest! [Insert your Greenhouse Link]</h3>
@@ -92,7 +92,7 @@ subject: My Basic Email Template Subject
 				<callout>
 					<row>
 						<columns small="3" large="2">
-							<img class="small-float-center" src="/assets/img/amazon.png" alt="UBS-Amazon partnership">
+							<img class="small-float-center" src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/amazon.png" alt="UBS-Amazon partnership">
 						</columns>
 						<columns small="9" large="10">
 							<h4 class="blue">What the new FINRA guidance on texting means for advisors and firms, via Financial Planning mag mentions on their article</h4>
@@ -116,7 +116,7 @@ subject: My Basic Email Template Subject
 					</row>
 					<row>
 						<columns small="3" large="2">
-							<img class="small-float-center" src="/assets/img/bitmap.png" alt="The Mobile Revolution">
+							<img class="small-float-center" src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/bitmap.png" alt="The Mobile Revolution">
 						</columns>
 						<columns small="9" large="10">
 							<h4 class="blue">The Mobile Revolution: Recap of Hearsay Summit 2017 | Hearsay Systems</h4>
@@ -137,7 +137,7 @@ subject: My Basic Email Template Subject
 					</row>
 					<row>
 						<columns small="3" large="2">
-							<img class="small-float-center" src="/assets/img/exams.png" alt="The Mobile Revolution">
+							<img class="small-float-center" src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/exams.png" alt="The Mobile Revolution">
 						</columns>
 						<columns small="9" large="10">
 							<h4 class="blue">What the new FINRA guidance on texting means for advisors and firms, via Financial Planning mag mentions on their article</h4>
