--- a/src/pages/content.html
+++ b/src/pages/content.html
@@ -33,7 +33,7 @@ subject: My Basic Email Template Subject
 <wrapper class="contet-section">
 	<spacer size="30"></spacer>
 	<container>
-		<row>
+
 			<h5 class="first last">NEW COMPANY HIGHLIGHTS</h5>
 			<wrapper class="content-box">
 				<callout>
@@ -50,24 +50,30 @@ subject: My Basic Email Template Subject
 						</columns>
 					</row>
 					<row>
-						<columns valign="bottom">
-							<button class="set-right-justified radius" href="#">Publish</button>
+						<columns valign="bottom" large="3" small=3 class="large-offset-10 small-offset-8">
+							<center>
+								<button class="set-right-justified radius" href="#">Publish</button>
+							</center>
 						</columns>
 					</row>
 				</callout>
 			</wrapper>
+			<spacer size="15"></spacer>
 			<wrapper class="content-box">
 				<callout>
 					<row>
 						<h3>"Having just the vision's no solution; everything depends on execution." -- Stephen Sondheim, composer and lyricist</h3>
 					</row>
 					<row>
-						<columns valign="bottom">
-							<button class="set-right-justified radius" href="#">Publish</button>
+						<columns valign="bottom" large="3" small=3 class="large-offset-10 small-offset-8">
+							<center>
+								<button class="set-right-justified radius" href="#">Publish</button>
+							</center>
 						</columns>
 					</row>
 				</callout>
 			</wrapper>
+			<spacer size="15"></spacer>
 
 			<spacer size="30"></spacer>
 			<h5>NEW PERSONALIZED POSTS</h5>
@@ -82,12 +88,15 @@ subject: My Basic Email Template Subject
 						</columns>
 					</row>
 					<row>
-						<columns valign="bottom">
-							<button class="set-right-justified radius" href="#">Publish</button>
+						<columns valign="bottom" large="3" small=3 class="large-offset-10 small-offset-8">
+							<center>
+								<button class="set-right-justified radius" href="#">Publish</button>
+							</center>
 						</columns>
 					</row>
 				</callout>
 			</wrapper>
+			<spacer size="15"></spacer>
 			<wrapper class="content-box">
 				<callout>
 					<row>
@@ -100,12 +109,15 @@ subject: My Basic Email Template Subject
 						</columns>
 					</row>
 					<row>
-						<columns valign="bottom">
-							<button class="set-right-justified radius" href="#">Publish</button>
+						<columns valign="bottom" large="3" small=3 class="large-offset-10 small-offset-8">
+							<center>
+								<button class="set-right-justified radius" href="#">Publish</button>
+							</center>
 						</columns>
 					</row>
 				</callout>
 			</wrapper>
+			<spacer size="15"></spacer>
 
 			<spacer size="30"></spacer>
 			<h5>NEW ENGAGING POSTS</h5>
@@ -124,12 +136,15 @@ subject: My Basic Email Template Subject
 						</columns>
 					</row>
 					<row>
-						<columns valign="bottom">
-							<button class="set-right-justified radius" href="#">Publish</button>
+						<columns valign="bottom" large="3" small=3 class="large-offset-10 small-offset-8">
+							<center>
+								<button class="set-right-justified radius" href="#">Publish</button>
+							</center>
 						</columns>
 					</row>
 				</callout>
 			</wrapper>
+			<spacer size="15"></spacer>
 			<wrapper class="content-box">
 				<callout>
 					<row>
@@ -145,14 +160,17 @@ subject: My Basic Email Template Subject
 						</columns>
 					</row>
 					<row>
-						<columns valign="bottom">
-							<button class="set-right-justified radius" href="#">Publish</button>
+						<columns valign="bottom" large="3" small=3 class="large-offset-10 small-offset-8">
+							<center>
+								<button class="set-right-justified radius" href="#">Publish</button>
+							</center>
 						</columns>
 					</row>
 				</callout>
 			</wrapper>
+			<spacer size="15"></spacer>
 
 			<spacer size="60"></spacer>
-		</row>
+
 	</container>
 </wrapper>
